// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar responsive 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="158.8235294117647"
      />
      <rect
        class="bar c1"
        height="135"
        width="102.85714285714285"
        x="282.8571428571429"
        y="135"
      />
      <rect
        class="bar c1"
        height="142.94117647058823"
        width="102.85714285714285"
        x="25.71428571428575"
        y="127.05882352941177"
      />
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="102.85714285714285"
        x="411.42857142857144"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="47.64705882352942"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="102.85714285714285"
        x="282.8571428571429"
        y="31.764705882352956"
      />
      <rect
        class="bar c2"
        height="127.05882352941177"
        width="102.85714285714285"
        x="25.71428571428575"
        y="0"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="102.85714285714285"
        x="411.42857142857144"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M77.14285714285717,135L205.71428571428572,119.11764705882354L334.28571428571433,127.05882352941177L462.8571428571429,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="77.14285714285717"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="205.71428571428572"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="334.28571428571433"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="462.8571428571429"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M77.14285714285717,262.05882352941177L205.71428571428572,150.88235294117646L334.28571428571433,198.52941176470588L462.8571428571429,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="77.14285714285717"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="205.71428571428572"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="334.28571428571433"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="462.8571428571429"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar with height 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 100px;
  width: 177.77777777777777px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="4.117647058823529"
        width="14.814814814814813"
        x="22.222222222222225"
        y="5.882352941176471"
      />
      <rect
        class="bar c1"
        height="5"
        width="14.814814814814813"
        x="40.74074074074074"
        y="5"
      />
      <rect
        class="bar c1"
        height="5.294117647058823"
        width="14.814814814814813"
        x="3.7037037037037095"
        y="4.705882352941177"
      />
      <rect
        class="bar c1"
        height="4.117647058823529"
        width="14.814814814814813"
        x="59.25925925925925"
        y="5.882352941176471"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="4.117647058823529"
        width="14.814814814814813"
        x="22.222222222222225"
        y="1.764705882352942"
      />
      <rect
        class="bar c2"
        height="3.8235294117647056"
        width="14.814814814814813"
        x="40.74074074074074"
        y="1.1764705882352935"
      />
      <rect
        class="bar c2"
        height="4.705882352941177"
        width="14.814814814814813"
        x="3.7037037037037095"
        y="0"
      />
      <rect
        class="bar c2"
        height="3.8235294117647056"
        width="14.814814814814813"
        x="59.25925925925925"
        y="2.0588235294117654"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 10)"
    />
    <g
      class="axis-y "
    />
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M11.111111111111116,5L29.629629629629633,4.411764705882353L48.148148148148145,4.705882352941177L66.66666666666666,9.411764705882353"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="11.111111111111116"
          cy="5"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="29.629629629629633"
          cy="4.411764705882353"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="48.148148148148145"
          cy="4.705882352941177"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="66.66666666666666"
          cy="9.411764705882353"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M11.111111111111116,9.705882352941176L29.629629629629633,5.588235294117647L48.148148148148145,7.352941176470589L66.66666666666666,6.176470588235294"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="11.111111111111116"
          cy="9.705882352941176"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="29.629629629629633"
          cy="5.588235294117647"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="48.148148148148145"
          cy="7.352941176470589"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="66.66666666666666"
          cy="6.176470588235294"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Bar with width 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 56.25px;
  width: 100px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="-13.897058823529413"
        width="0"
        x="0"
        y="-19.852941176470587"
      />
      <rect
        class="bar c1"
        height="-16.875"
        width="0"
        x="0"
        y="-16.875"
      />
      <rect
        class="bar c1"
        height="-17.86764705882353"
        width="0"
        x="0"
        y="-15.882352941176471"
      />
      <rect
        class="bar c1"
        height="-13.897058823529413"
        width="0"
        x="0"
        y="-19.852941176470587"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="-13.897058823529413"
        width="0"
        x="0"
        y="-5.9558823529411775"
      />
      <rect
        class="bar c2"
        height="-12.904411764705884"
        width="0"
        x="0"
        y="-3.9705882352941195"
      />
      <rect
        class="bar c2"
        height="-15.882352941176471"
        width="0"
        x="0"
        y="0"
      />
      <rect
        class="bar c2"
        height="-12.904411764705884"
        width="0"
        x="0"
        y="-6.9485294117647065"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, -33.75)"
    />
    <g
      class="axis-y "
    />
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M0,-16.875L0,-14.889705882352942L0,-15.882352941176471L0,-31.764705882352942"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="0"
          cy="-16.875"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="0"
          cy="-14.889705882352942"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="0"
          cy="-15.882352941176471"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="0"
          cy="-31.764705882352942"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M0,-32.75735294117647L0,-18.860294117647058L0,-24.816176470588236L0,-20.845588235294116"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="0"
          cy="-32.75735294117647"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="0"
          cy="-18.860294117647058"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="0"
          cy="-24.816176470588236"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="0"
          cy="-20.845588235294116"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Combination 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="158.8235294117647"
      />
      <rect
        class="bar c1"
        height="135"
        width="102.85714285714285"
        x="282.8571428571429"
        y="135"
      />
      <rect
        class="bar c1"
        height="142.94117647058823"
        width="102.85714285714285"
        x="25.71428571428575"
        y="127.05882352941177"
      />
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="102.85714285714285"
        x="411.42857142857144"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="47.64705882352942"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="102.85714285714285"
        x="282.8571428571429"
        y="31.764705882352956"
      />
      <rect
        class="bar c2"
        height="127.05882352941177"
        width="102.85714285714285"
        x="25.71428571428575"
        y="0"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="102.85714285714285"
        x="411.42857142857144"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M77.14285714285717,135L205.71428571428572,119.11764705882354L334.28571428571433,127.05882352941177L462.8571428571429,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="77.14285714285717"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="205.71428571428572"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="334.28571428571433"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="462.8571428571429"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M77.14285714285717,262.05882352941177L205.71428571428572,150.88235294117646L334.28571428571433,198.52941176470588L462.8571428571429,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="77.14285714285717"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="205.71428571428572"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="334.28571428571433"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="462.8571428571429"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Combination width grid 1`] = `
.c5 {
  fill: rgb(152,0,67);
}

.c7 {
  fill: rgb(221,28,119);
}

.c1 path {
  stroke: transparent;
}

.c1 line {
  stroke: rgb(243,243,243);
}

.c4 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c6 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c2 {
  fill: rgb(8,104,172);
}

.c2:hover {
  fill: rgb(0,84,152);
}

.c3 {
  fill: rgb(67,162,202);
}

.c3:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="grid c1"
    />
    <g
      class="apples-layer"
    >
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="158.8235294117647"
      />
      <rect
        class="bar c2"
        height="135"
        width="102.85714285714285"
        x="282.8571428571429"
        y="135"
      />
      <rect
        class="bar c2"
        height="142.94117647058823"
        width="102.85714285714285"
        x="25.71428571428575"
        y="127.05882352941177"
      />
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="102.85714285714285"
        x="411.42857142857144"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c3"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="47.64705882352942"
      />
      <rect
        class="bar c3"
        height="103.23529411764707"
        width="102.85714285714285"
        x="282.8571428571429"
        y="31.764705882352956"
      />
      <rect
        class="bar c3"
        height="127.05882352941177"
        width="102.85714285714285"
        x="25.71428571428575"
        y="0"
      />
      <rect
        class="bar c3"
        height="103.23529411764707"
        width="102.85714285714285"
        x="411.42857142857144"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c4"
        d="M77.14285714285717,135L205.71428571428572,119.11764705882354L334.28571428571433,127.05882352941177L462.8571428571429,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="77.14285714285717"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="205.71428571428572"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="334.28571428571433"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="462.8571428571429"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c6"
        d="M77.14285714285717,262.05882352941177L205.71428571428572,150.88235294117646L334.28571428571433,198.52941176470588L462.8571428571429,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="77.14285714285717"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="205.71428571428572"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="334.28571428571433"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="462.8571428571429"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Combination with Title, X label, Y label 1`] = `
.c7 {
  fill: rgb(152,0,67);
}

.c9 {
  fill: rgb(221,28,119);
}

.c2 {
  font-size: 0.9em;
  text-anchor: middle;
}

.c3 {
  font-size: 0.9em;
  text-anchor: middle;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c6 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c8 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c4 {
  fill: rgb(8,104,172);
}

.c4:hover {
  fill: rgb(0,84,152);
}

.c5 {
  fill: rgb(67,162,202);
}

.c5:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

.c1 {
  font-size: 1.2em;
  text-anchor: middle;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <text
      class="chart-title c1"
      width="540"
      x="270"
      y="10"
    >
      Test title
    </text>
    <text
      class="x-axis-label c2"
      height="270"
      width="540"
      x="270"
      y="290"
    >
      Test X label
    </text>
    <text
      class="y-axis-label c3"
      height="270"
      width="540"
      x="-135"
      y="-16"
    >
      Test Y label
    </text>
    <g
      class="apples-layer"
    >
      <rect
        class="bar c4"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="158.8235294117647"
      />
      <rect
        class="bar c4"
        height="135"
        width="102.85714285714285"
        x="282.8571428571429"
        y="135"
      />
      <rect
        class="bar c4"
        height="142.94117647058823"
        width="102.85714285714285"
        x="25.71428571428575"
        y="127.05882352941177"
      />
      <rect
        class="bar c4"
        height="111.1764705882353"
        width="102.85714285714285"
        x="411.42857142857144"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c5"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="47.64705882352942"
      />
      <rect
        class="bar c5"
        height="103.23529411764707"
        width="102.85714285714285"
        x="282.8571428571429"
        y="31.764705882352956"
      />
      <rect
        class="bar c5"
        height="127.05882352941177"
        width="102.85714285714285"
        x="25.71428571428575"
        y="0"
      />
      <rect
        class="bar c5"
        height="103.23529411764707"
        width="102.85714285714285"
        x="411.42857142857144"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c6"
        d="M77.14285714285717,135L205.71428571428572,119.11764705882354L334.28571428571433,127.05882352941177L462.8571428571429,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c7"
          color="rgb(152,0,67)"
          cx="77.14285714285717"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(152,0,67)"
          cx="205.71428571428572"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(152,0,67)"
          cx="334.28571428571433"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(152,0,67)"
          cx="462.8571428571429"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c8"
        d="M77.14285714285717,262.05882352941177L205.71428571428572,150.88235294117646L334.28571428571433,198.52941176470588L462.8571428571429,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c9"
          color="rgb(221,28,119)"
          cx="77.14285714285717"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c9"
          color="rgb(221,28,119)"
          cx="205.71428571428572"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c9"
          color="rgb(221,28,119)"
          cx="334.28571428571433"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c9"
          color="rgb(221,28,119)"
          cx="462.8571428571429"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Combination with X label rotation 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="158.8235294117647"
      />
      <rect
        class="bar c1"
        height="135"
        width="102.85714285714285"
        x="282.8571428571429"
        y="135"
      />
      <rect
        class="bar c1"
        height="142.94117647058823"
        width="102.85714285714285"
        x="25.71428571428575"
        y="127.05882352941177"
      />
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="102.85714285714285"
        x="411.42857142857144"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="47.64705882352942"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="102.85714285714285"
        x="282.8571428571429"
        y="31.764705882352956"
      />
      <rect
        class="bar c2"
        height="127.05882352941177"
        width="102.85714285714285"
        x="25.71428571428575"
        y="0"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="102.85714285714285"
        x="411.42857142857144"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M77.14285714285717,135L205.71428571428572,119.11764705882354L334.28571428571433,127.05882352941177L462.8571428571429,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="77.14285714285717"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="205.71428571428572"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="334.28571428571433"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="462.8571428571429"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M77.14285714285717,262.05882352941177L205.71428571428572,150.88235294117646L334.28571428571433,198.52941176470588L462.8571428571429,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="77.14285714285717"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="205.71428571428572"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="334.28571428571433"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="462.8571428571429"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Combination with dates 1`] = `
.c4 {
  fill: rgb(152,0,67);
}

.c6 {
  fill: rgb(221,28,119);
}

.c3 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c5 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c1 {
  fill: rgb(8,104,172);
}

.c1:hover {
  fill: rgb(0,84,152);
}

.c2 {
  fill: rgb(67,162,202);
}

.c2:hover {
  fill: rgb(47,142,182);
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <g
      class="apples-layer"
    >
      <rect
        class="bar c1"
        height="142.94117647058823"
        width="102.85714285714285"
        x="25.71428571428575"
        y="127.05882352941177"
      />
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="158.8235294117647"
      />
      <rect
        class="bar c1"
        height="135"
        width="102.85714285714285"
        x="282.8571428571429"
        y="135"
      />
      <rect
        class="bar c1"
        height="111.1764705882353"
        width="102.85714285714285"
        x="411.42857142857144"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c2"
        height="127.05882352941177"
        width="102.85714285714285"
        x="25.71428571428575"
        y="0"
      />
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="47.64705882352942"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="102.85714285714285"
        x="282.8571428571429"
        y="31.764705882352956"
      />
      <rect
        class="bar c2"
        height="103.23529411764707"
        width="102.85714285714285"
        x="411.42857142857144"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c3"
        d="M77.14285714285717,135L205.71428571428572,119.11764705882354L334.28571428571433,127.05882352941177L462.8571428571429,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="77.14285714285717"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="205.71428571428572"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="334.28571428571433"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c4"
          color="rgb(152,0,67)"
          cx="462.8571428571429"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M77.14285714285717,262.05882352941177L205.71428571428572,150.88235294117646L334.28571428571433,198.52941176470588L462.8571428571429,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="77.14285714285717"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="205.71428571428572"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="334.28571428571433"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(221,28,119)"
          cx="462.8571428571429"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Combination with source 1`] = `
.c5 {
  fill: rgb(152,0,67);
}

.c7 {
  fill: rgb(221,28,119);
}

.c4 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c6 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c2 {
  fill: rgb(8,104,172);
}

.c2:hover {
  fill: rgb(0,84,152);
}

.c3 {
  fill: rgb(67,162,202);
}

.c3:hover {
  fill: rgb(47,142,182);
}

.c1 {
  font-size: 0.7em;
  font-style: italic;
  text-anchor: end;
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <text
      class="data-source c1"
      height="270"
      width="540"
      x="540"
      y="270"
    >
      Test source
    </text>
    <g
      class="apples-layer"
    >
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="158.8235294117647"
      />
      <rect
        class="bar c2"
        height="135"
        width="102.85714285714285"
        x="282.8571428571429"
        y="135"
      />
      <rect
        class="bar c2"
        height="142.94117647058823"
        width="102.85714285714285"
        x="25.71428571428575"
        y="127.05882352941177"
      />
      <rect
        class="bar c2"
        height="111.1764705882353"
        width="102.85714285714285"
        x="411.42857142857144"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c3"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="47.64705882352942"
      />
      <rect
        class="bar c3"
        height="103.23529411764707"
        width="102.85714285714285"
        x="282.8571428571429"
        y="31.764705882352956"
      />
      <rect
        class="bar c3"
        height="127.05882352941177"
        width="102.85714285714285"
        x="25.71428571428575"
        y="0"
      />
      <rect
        class="bar c3"
        height="103.23529411764707"
        width="102.85714285714285"
        x="411.42857142857144"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c4"
        d="M77.14285714285717,135L205.71428571428572,119.11764705882354L334.28571428571433,127.05882352941177L462.8571428571429,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="77.14285714285717"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="205.71428571428572"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="334.28571428571433"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c5"
          color="rgb(152,0,67)"
          cx="462.8571428571429"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c6"
        d="M77.14285714285717,262.05882352941177L205.71428571428572,150.88235294117646L334.28571428571433,198.52941176470588L462.8571428571429,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="77.14285714285717"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="205.71428571428572"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="334.28571428571433"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c7"
          color="rgb(221,28,119)"
          cx="462.8571428571429"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Combination with source link 1`] = `
.c6 {
  fill: rgb(152,0,67);
}

.c8 {
  fill: rgb(221,28,119);
}

.c5 {
  fill: none;
  stroke: rgb(152,0,67);
  stroke-width: 3;
  pointer-events: none;
}

.c7 {
  fill: none;
  stroke: rgb(221,28,119);
  stroke-width: 3;
  pointer-events: none;
}

.c3 {
  fill: rgb(8,104,172);
}

.c3:hover {
  fill: rgb(0,84,152);
}

.c4 {
  fill: rgb(67,162,202);
}

.c4:hover {
  fill: rgb(47,142,182);
}

.c1 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  font-size: 0.7em;
  font-style: italic;
  text-anchor: end;
}

.c0 {
  height: 360px;
  width: 640px;
}

<svg
  baseProfile="full"
  class="silky-charts c0"
  xmlns="http://www.w3.org/2000/svg"
>
  <g
    class="silky-charts-container "
    transform="translate(50, 40)"
  >
    <a
      class="data-source-link c1"
      href="#"
      target="foo"
      title="combination"
    >
      <text
        class="data-source c2"
        height="270"
        width="540"
        x="540"
        y="270"
      />
    </a>
    <g
      class="apples-layer"
    >
      <rect
        class="bar c3"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="158.8235294117647"
      />
      <rect
        class="bar c3"
        height="135"
        width="102.85714285714285"
        x="282.8571428571429"
        y="135"
      />
      <rect
        class="bar c3"
        height="142.94117647058823"
        width="102.85714285714285"
        x="25.71428571428575"
        y="127.05882352941177"
      />
      <rect
        class="bar c3"
        height="111.1764705882353"
        width="102.85714285714285"
        x="411.42857142857144"
        y="158.8235294117647"
      />
    </g>
    <g
      class="bananas-layer"
    >
      <rect
        class="bar c4"
        height="111.1764705882353"
        width="102.85714285714285"
        x="154.2857142857143"
        y="47.64705882352942"
      />
      <rect
        class="bar c4"
        height="103.23529411764707"
        width="102.85714285714285"
        x="282.8571428571429"
        y="31.764705882352956"
      />
      <rect
        class="bar c4"
        height="127.05882352941177"
        width="102.85714285714285"
        x="25.71428571428575"
        y="0"
      />
      <rect
        class="bar c4"
        height="103.23529411764707"
        width="102.85714285714285"
        x="411.42857142857144"
        y="55.58823529411765"
      />
    </g>
    <g
      class="axis-x "
      transform="translate(0, 270)"
    />
    <g
      class="axis-y "
    />
    <g
      class="cherries-layer"
    >
      <path
        class="line-path bar-line c5"
        d="M77.14285714285717,135L205.71428571428572,119.11764705882354L334.28571428571433,127.05882352941177L462.8571428571429,254.11764705882354"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c6"
          color="rgb(152,0,67)"
          cx="77.14285714285717"
          cy="135"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(152,0,67)"
          cx="205.71428571428572"
          cy="119.11764705882354"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(152,0,67)"
          cx="334.28571428571433"
          cy="127.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c6"
          color="rgb(152,0,67)"
          cx="462.8571428571429"
          cy="254.11764705882354"
          r="6"
        />
      </g>
    </g>
    <g
      class="dates-layer"
    >
      <path
        class="line-path bar-line c7"
        d="M77.14285714285717,262.05882352941177L205.71428571428572,150.88235294117646L334.28571428571433,198.52941176470588L462.8571428571429,166.76470588235293"
      />
      <g
        class="line-dot-group"
      >
        <circle
          class="bar-line c8"
          color="rgb(221,28,119)"
          cx="77.14285714285717"
          cy="262.05882352941177"
          r="6"
        />
        <circle
          class="bar-line c8"
          color="rgb(221,28,119)"
          cx="205.71428571428572"
          cy="150.88235294117646"
          r="6"
        />
        <circle
          class="bar-line c8"
          color="rgb(221,28,119)"
          cx="334.28571428571433"
          cy="198.52941176470588"
          r="6"
        />
        <circle
          class="bar-line c8"
          color="rgb(221,28,119)"
          cx="462.8571428571429"
          cy="166.76470588235293"
          r="6"
        />
      </g>
    </g>
  </g>
</svg>
`;
